management-namespace/new-prometheus/prometheus-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deploy
  namespace: mgt
spec:
  replicas: 1
  selector:
   matchLabels:
    app: prometheus-server
  template:
    metadata:
      labels:
        app: prometheus-server
    spec:
      containers:
        - name: prometheus
        #  image: prom/prometheus:v2.12.0
          image: prom/prometheus:v2.28.1
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus/"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
            - name: prometheus-storage-volume
              mountPath: /prometheus/
      tolerations:
      - key: "mgt"
        operator: "Equal"
        value: "present"
        effect: "NoSchedule"    
      nodeSelector:
        mgt: present         
      volumes:
        - name: prometheus-config-volume
          configMap:
            defaultMode: 420
            name: prometheus-server-conf

        - name: prometheus-storage-volume
          emptyDir: {}
